# NID-Pose-Estimation

./: CMakeLists.txt  CudaComputeHref.cu  CudaComputeHref.cuh  CudaPoints3d.cu  CudaPoints3d.cuh  NID_pose_estimation.cpp  NID_standard_property.cpp  README.md  build.sh  config_eth_cvg.yaml  run_test_eth_cvg.sh
g2o/: CMakeLists.txt
g2o/g2o/core/: block_solver.h  block_solver.hpp  computeH.cu  computeH.cuh  hyper_graph.h  optimizable_graph.cpp  optimizable_graph.h  optimization_algorithm_levenberg.cpp  optimization_algorithm_levenberg.h  optimization_algorithm_with_hessian.h  solver.h  sparse_optimizer.cpp  sparse_optimizer.h
g2o/g2o/types/: types_six_dof_expmap.cpp  types_six_dof_expmap.h
